small on main page

--- a/src/lib/css/main.postcss
+++ b/src/lib/css/main.postcss
@@ -1,3 +1,7 @@
+body {
+	@apply font-uncut-sans text-grey;
+}
+
 .text-eco-gradient {
-	@apply text-transparent bg-gradient-to-r from-[#17742F] to-[#E0E482] bg-clip-text;
+	@apply bg-gradient-to-r from-[#17742f] to-[#e0e482] bg-clip-text text-transparent leading-tight;
 }
